# rename-wheel

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/spare_tire/: __init__.py  cli.py  download.py  rename.py
src/spare_tire/server/: __init__.py  app.py  config.py  html.py  stream.py  upstream.py
src/wheel_rename/: cli.py  download.py
tests/: test_dual_install.py  test_icechunk_integration.py  test_integration.py  test_rename.py
tests/fixtures/conflicting-deps/: create_wheels.py  test_conflict.py
tests/fixtures/dual-install/: .gitignore  README.md
tests/fixtures/zarr-compat/: README.md  create_wheels.py  test_zarr_compat.py
